# weart-est-personal

./: .gitignore  Cargo.toml  build.rs  openocd.cfg  openocd.gdb
.cargo/: config.toml
host_driver/: connection_handlers.py  driver.py  email_creds.txt  io_handling.py  meas_defs.yaml  mongo_cert.pem  requirements.txt  test_defs.yaml  test_format.py
host_driver/data/: flash_dump_firstTryWhichISentToIan.csv
src/: bsp.rs  data_manager.rs  dutsp.rs  main.rs  periph_managers.rs  prog_mngr.rs  startup.rs  strs_ctrl.rs  test_management.rs
