[package]
name = "weart-est"
version = "0.1.0"
edition = "2021"
authors = ["Ian Hill <ianrmhill@gmail.com>"]
description = "Firmware for the weartest automated wear-out testing hardware system"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
cortex-m-semihosting = "0.5.0"

atsamd-hal = { path = "atsamd_hal_modified/hal", features = ["samd21j-rt", "usb"] }

panic-halt = "0.2.0"
panic-semihosting = "0.6.0"
usbd-serial = "0.2.2"

pid = "4.0.0"
libm = "0.2.7"
hex-literal = "0.3.4"
nb = "1.1.0"

[features]
semihost = []
